--- a/style.css
+++ b/style.css
@@ -167,22 +167,20 @@ header {
 }
 
 
-.logo {
-  max-width: 300px;
-  width: 80%;
-  height: auto;
-  margin: 0 auto 1rem auto;
-  display: block;
+.welcome-text {
+  max-width: 700px;
+  margin: 1.5rem auto;
+  text-align: center;
+  font-family: 'Playfair Display', Georgia, serif;
+  font-size: 1.2rem;
+  line-height: 1.8;
+  color: #333;
+  padding: 0 1rem;
 }
 
 @media (max-width: 768px) {
-  .logo {
-    max-width: 200px;
-  }
-}
-
-@media (max-width: 480px) {
-  .logo {
-    max-width: 150px;
+  .welcome-text {
+    font-size: 1rem;
+    line-height: 1.6;
   }
 }
