--- a/style.css
+++ b/style.css
@@ -184,3 +184,25 @@ header {
     line-height: 1.6;
   }
 }
+
+
+.logo {
+  max-width: 70%;
+  height: auto;
+  margin: 0 auto 1rem auto;
+  display: block;
+}
+
+@media (max-width: 768px) {
+  .logo {
+    max-width: 60%;
+    max-height: 100px;
+  }
+}
+
+@media (max-width: 480px) {
+  .logo {
+    max-width: 70%;
+    max-height: 80px;
+  }
+}
