--- a/style.css
+++ b/style.css
@@ -187,22 +187,23 @@ header {
 
 
 .logo {
-  max-width: 70%;
+  max-width: 300px;
+  width: 80%;
   height: auto;
-  margin: 0 auto 1rem auto;
+  margin: 0 auto 1.5rem auto;
   display: block;
 }
 
 @media (max-width: 768px) {
   .logo {
-    max-width: 60%;
-    max-height: 100px;
+    max-width: 250px;
+    width: 70%;
   }
 }
 
 @media (max-width: 480px) {
   .logo {
-    max-width: 70%;
-    max-height: 80px;
+    max-width: 220px;
+    width: 80%;
   }
 }
